fixed signup and login failed component spacing

--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -5,7 +5,7 @@
 }
 
 .avatar {
-  margin: 8px;
+  margin: 0px;
 }
 
 .formBox {
@@ -13,9 +13,10 @@
 }
 
 .logoImg {
-  padding-top: 120px;
-  width: 50%;
+  padding-top: 20px;
+  width: 40%;
   height: auto;
+  padding-bottom: 95px;
 }
 
 .errorMessageGrid {
